fix: overflow modal, add some locales, minor ui changes

--- a/assets/styles/core/_variables.scss
+++ b/assets/styles/core/_variables.scss
@@ -14,6 +14,9 @@ $primary-button-color: #2073af;
 $primary-black: #000;
 $primary-white: #fff;
 
+$color-text: #555;
+$color-muted-text: #aaa;
+
 // Backgrounds types
 $bg-grass: #35b547;
 $bg-fire: #f28f3e;
